--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,21 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+<div class="row" style="margin:-20px;">
+  <div class="col-md-12">
+    <iframe class="nospace" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.9969509309394!2d-58.44819585793382!3d-34.60423861036391!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca0e5633b5e1%3A0x3f1a5236d66ddfc7!2sIquall+Networks!5e0!3m2!1ses!2sar!4v1452700213744" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
 </div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-sm-6 col-xs-12">
+      <h3>Antena</h3>
+      <p>
+        descripcion
+      </p>
+    </div>
+    <div class="col-md-6 col-sm-6 col-xs-12">
+      <h3>Ubicacion</h3>
+      <p>
+        descripcion
+      </p>
+    </div>
+  </div>
 </div>
