Backend by Sailjs

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -27,7 +27,7 @@
 <div class="container" id="list">
   <div class="row">
 
-    <div class="col-md-12 col-sm-6 col-xs-12">
+    <div class="col-md-12 col-sm-6 col-xs-12" ng-hide="antennas">
       <h2>Cargando información..</h2>
     </div>
 
