--- a/app/views/all.html
+++ b/app/views/all.html
@@ -1,9 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 col-sm-12 col-xs-12 minimum">
+    	{{antennas}}
     	<h2 ng-hide="antennas">Cargando información..</h2>
       	<h3 ng-show="antennas">Antenas instaladas hasta la fecha</h3>
-		<table class="table table-striped">
+		<table class="table table-striped" ng-show="antennas">
 			<thead>
 				<tr>
 					<td>Tecnología</td>
@@ -39,7 +40,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<nav>
+		<nav ng-show="antennas">
 			<ul class="pagination">
 			<li>
 				<a href="#" aria-label="Previous">
