--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,12 +1,8 @@
 <div class="row moveup" ng-controller="MainCtrl as vm">
   <div class="col-md-12">
 
-    <!-- <ng-map zoom="11" center="[{{center}}]">
-      <marker position="[{{center}}]" title="hello"></marker>
-    </ng-map> -->
-
-    <ng-map default-style="true" center="[{{center}}]" zoom="10">
-      <marker id='{{antenna.id}}' position="{{antenna.position}}"
+    <ng-map default-style="true" center="{{center}}" zoom="10">
+      <marker id='{{antenna.id}}' position="{{center}}"
         ng-repeat="antenna in vm.antennas"
         on-click="vm.showDetail(antenna)">
       </marker>
@@ -20,39 +16,39 @@
         </div>
       </info-window>
     </ng-map>
-    <a href="javascript:;" class="pull-rigth" ng-click="vm.hideDetail(e, vm.antenna)" style="margin-left:20px;">ocultar info</a>
+    <a ng-show="antennas" href="javascript:;" class="pull-rigth" ng-click="vm.hideDetail(e, vm.antenna)" style="margin-left:20px;">ocultar info</a>
 
   </div>
 </div>
 <div class="container" id="list">
-  <div class="row">
-
-    <div class="col-md-12 col-sm-6 col-xs-12" ng-hide="antennas">
+  <div class="row minimo" ng-hide="antennas">
+    <div class="col-md-12 col-sm-6 col-xs-12">
       <h2>Cargando información..</h2>
     </div>
-
+  </div>
+  <div class="row minimo" ng-show="antennas">
     <div class="col-md-4 col-sm-6 col-xs-12">
       <h3>Tecnología</h3>
       <ul>
-        <li>Bandas: radio</li>
-        <li>Signal: averageSignal</li>
-        <li>Bateria: changeable</li>
+        <li>Bandas: {{radio}}</li>
+        <li>Signal: {{averageSignal}}</li>
+        <li>Bateria: {{changeable}}</li>
       </ul>
     </div>
     <div class="col-md-4 col-sm-3 col-xs-12">
       <h3>Información adicional</h3>
       <ul>
-        <li>ID: mcc Red: net</li>
-        <li>Area: area Celda: cell Unidad: unit</li>
-        <li>Rango: range samples</li>
+        <li>ID: {{mcc}} Red: {{net}}</li>
+        <li>Area: {{area}} Celda: {{cell}} Unidad: {{unit}}</li>
+        <li>Rango: {{ranges}} {{samples}}</li>
       </ul>
     </div>
     <div class="col-md-4 col-sm-3 col-xs-12">
       <h3>Ubicación</h3>
       <ul>
-        <li>Geolocalización: lat, lon</li>
-        <li>Operativa desde: created</li>
-        <li>Ultimo mantenimiento: updated</li>
+        <li>Geolocalización: {{lat}}, {{lon}}</li>
+        <li>Operativa desde: {{created}}</li>
+        <li>Ultimo mantenimiento: {{updated}}</li>
       </ul>
     </div>
   </div>
