--- a/app/views/all.html
+++ b/app/views/all.html
@@ -1,7 +1,6 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 col-sm-12 col-xs-12 minimum">
-    	{{antennas}}
     	<h2 ng-hide="antennas">Cargando información..</h2>
       	<h3 ng-show="antennas">Antenas instaladas hasta la fecha</h3>
 		<table class="table table-striped" ng-show="antennas">
@@ -14,8 +13,8 @@
 					<td>Celda</td>
 					<td>Unidad</td>
 					<td>Ubicación</td>
-					<td>Rango</td>
-					<td>Prueba</td>
+					<td>Range</td>
+					<td>Sample</td>
 					<td>Bateria</td>
 					<td>Instalación</td>
 					<td>Revisión</td>
@@ -23,20 +22,20 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr ng-repeat="a in antennas">
+				<tr ng-repeat="a in antennas | filter:data">
 					<td>{{a.radio}}</td>
 					<td>{{a.mcc}}</td>
 					<td>{{a.net}}</td>
 					<td>{{a.area}}</td>
 					<td>{{a.cell}}</td>
 					<td>{{a.unit}}</td>
-					<td>{{a.position[0]}},{{a.position[1]}}</td>
+					<td>{{a.lon}},{{a.lat}}</td>
 					<td>{{a.range}}</td>
 					<td>{{a.samples}}</td>
 					<td>{{a.changeable}}</td>
-					<td>{{a.created}}</td>
-					<td>{{a.updated}}</td>
-					<td>{{a.averagesignal}}</td>
+					<td><span am-time-ago="{{a.created}}"></span></td>
+					<td><span am-time-ago="{{a.updated}}"></span></td>
+					<td>{{a.averageSignal}}</td>
 				</tr>
 			</tbody>
 		</table>
