--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,54 +1,58 @@
-<div class="row moveup" ng-controller="MainCtrl as vm">
-  <div class="col-md-12">
+<div class="row moveup" ng-init="getData()" >
 
-    <ng-map default-style="true" center="{{center}}" zoom="10">
-      <marker id='{{antenna.id}}' position="{{center}}"
-        ng-repeat="antenna in vm.antennas"
-        on-click="vm.showDetail(antenna)">
+    <ng-map default-style="true" center="{{center}}" zoom="13">
+
+      <marker ng-repeat="antenna in antennas"
+        id='{{antenna.id}}'
+        position="{{antenna.lat}},{{antenna.lon}}"
+        on-click="showDetail(antenna)">
       </marker>
 
       <info-window id="foo-iw">
         <div ng-non-bindable="">
-          Cell: {{vm.antenna.cell}}<br/>
-          Bandas: {{vm.antenna.radio}}<br/>
-          Señal: {{vm.antenna.averagesignal}}<br/>
-          <a href="javascript:;" ng-click="vm.clicked()">Ver mas</a>
+          Cell: {{antenna.cell}}<br/>
+          Bandas: {{antenna.radio}}<br/>
+          Señal: {{antenna.averageSignal}}<br/>
         </div>
       </info-window>
+
     </ng-map>
-    <a ng-show="antennas" href="javascript:;" class="pull-rigth" ng-click="vm.hideDetail(e, vm.antenna)" style="margin-left:20px;">ocultar info</a>
+    
+    <!-- <a ng-show="antennas" href="javascript:;" class="pull-right" ng-click="hideDetail(e, antenna)">ocultar info</a> -->
 
   </div>
 </div>
 <div class="container" id="list">
-  <div class="row minimo" ng-hide="antennas">
+  <div class="row minimo" ng-hide="antenna">
     <div class="col-md-12 col-sm-6 col-xs-12">
-      <h2>Cargando información..</h2>
+      <h2 ng-hide="antennas">Cargando información..</h2>
+      <h2 ng-hide="antenna">Haga clic para ver mas informacion una celda</h2>
     </div>
   </div>
-  <div class="row minimo" ng-show="antennas">
-    <div class="col-md-4 col-sm-6 col-xs-12">
+  <div class="row">
+    <div class="col-md-4 col-sm-6 col-xs-12" ng-show="antenna">
       <h3>Tecnología</h3>
       <ul>
-        <li>Bandas: {{radio}}</li>
-        <li>Signal: {{averageSignal}}</li>
-        <li>Bateria: {{changeable}}</li>
+        <li>Bandas: {{antenna.radio}}</li>
+        <li ng-show="antenna.averageSignal">Signal: {{antenna.averageSignal}}</li>
+        <li>Bateria: {{antenna.changeable}}</li>
       </ul>
     </div>
-    <div class="col-md-4 col-sm-3 col-xs-12">
+    <div class="col-md-4 col-sm-3 col-xs-12" ng-show="antenna">
       <h3>Información adicional</h3>
       <ul>
-        <li>ID: {{mcc}} Red: {{net}}</li>
-        <li>Area: {{area}} Celda: {{cell}} Unidad: {{unit}}</li>
-        <li>Rango: {{ranges}} {{samples}}</li>
+        <li>ID: {{antenna.mcc}} Red: {{antenna.net}}</li>
+        <li>Area: {{antenna.area}} Cell: {{antenna.cell}} <span ng-show="antenna.unit">Unit: {{antenna.unit}}</span></li>
+        <li>Range: {{antenna.ranges}} {{antenna.samples}}</li>
       </ul>
     </div>
-    <div class="col-md-4 col-sm-3 col-xs-12">
+    <div class="col-md-4 col-sm-3 col-xs-12" ng-show="antenna">
       <h3>Ubicación</h3>
       <ul>
-        <li>Geolocalización: {{lat}}, {{lon}}</li>
-        <li>Operativa desde: {{created}}</li>
-        <li>Ultimo mantenimiento: {{updated}}</li>
+        <li>Dirección: {{address}}</li>
+        <li>Geolocalización: {{antenna.lat}}, {{antenna.lon}}</li>
+        <li>Operativa desde: <span am-time-ago="antenna.created"></span></li>
+        <li>Ultimo mantenimiento: <span am-time-ago="antenna.updated"></span></li>
       </ul>
     </div>
   </div>
